--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
     <link href="stylesheet.css" rel="stylesheet">
-    <script src="js/angular.min.js"></script>
+    <script src="angular.min.js"></script>
     <script src="app.js"></script>
    </head>
 
